--- a/package.json
+++ b/package.json
@@ -4,14 +4,16 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
-    "@webpack-cli/init": "^1.1.2"
+    "@webpack-cli/init": "^1.1.2",
+    "jquery": "^3.5.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
+    "@babel/plugin-transform-runtime": "^7.12.10",
     "@babel/preset-env": "^7.12.11",
     "babel-core": "^6.26.3",
     "babel-loader": "^8.2.2",
-    "babel-preset-env": "^1.7.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "html-webpack-plugin": "^4.5.1",
     "webpack": "^5.18.0",
     "webpack-cli": "^4.4.0"
